# algorithm-engineering

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  vcpkg.json
common/: CMakeLists.txt
common/include/: fast_set.hpp  graph_controller.hpp  graph_listener.hpp  graph_meta_data.hpp  graph_unit.hpp  hopcroft_karp_matching.hpp  util.hpp
common/include/heap/: heap.hpp  heap_comparators.hpp
common/src/: fast_set.cpp  graph_controller.cpp  graph_meta_data.cpp  graph_unit.cpp  heap_comparators.cpp  hopcroft_karp_matching.cpp  util.cpp
common/test/: garbage_collect_test.cpp  graph_controller_test.cpp  heap_test.cpp  hopcroft_karp_matching_test.cpp  set_test.cpp
data-reduction/: CMakeLists.txt
data-reduction/include/: data_reduction_factory.hpp  data_reduction_node.hpp  data_reduction_options.hpp  data_reductions.hpp  degree_0_reduction.hpp  degree_1_reduction.hpp  degree_2_folding.hpp  degree_3_independent_set_reduction.hpp  degree_4_crossbow_reduction.hpp  degree_4_path_reduction.hpp  degree_4_trebuchet_reduction.hpp  degree_greater_k_reduction.hpp  desk_reduction.hpp  dominate_reduction.hpp  funnel_reduction.hpp  graph_operation.hpp  loop_reduction.hpp  lp_reduction.hpp  neighbor_clique_partition_reduction.hpp  triangle_reduction.hpp  unconfined_reduction.hpp
data-reduction/include/container/: data_reduction_container.hpp  exhaustive_container.hpp  exhaustive_infrequent_container.hpp  exhaustive_iterative_container.hpp  once_container.hpp
data-reduction/src/: data_reduction_factory.cpp  data_reduction_node.cpp  data_reductions.cpp  degree_0_reduction.cpp  degree_1_reduction.cpp  degree_2_folding.cpp  degree_3_independent_set_reduction.cpp  degree_4_crossbow_reduction.cpp  degree_4_path_reduction.cpp  degree_4_trebuchet_reduction.cpp  degree_greater_k_reduction.cpp  desk_reduction.cpp  dominate_reduction.cpp  funnel_reduction.cpp  graph_operation.cpp  loop_reduction.cpp  lp_reduction.cpp  neighbor_clique_partition_reduction.cpp  triangle_reduction.cpp  unconfined_reduction.cpp
data-reduction/src/container/: data_reduction_container.cpp  exhaustive_container.cpp  exhaustive_infrequent_container.cpp  exhaustive_iterative_container.cpp  once_container.cpp
data-reduction/test/: container_test.cpp  degree_0_test.cpp  degree_1_test.cpp  degree_2_test.cpp  degree_four_crossbow_test.cpp  degree_four_path_test.cpp  degree_four_trebuchet_test.cpp  degree_greater_k_test.cpp  degree_three_independent_set_test.cpp  dominate_test.cpp  loop_reduction_test.cpp  lp_test.cpp  neighbor_clique_partition_test.cpp
dep/nlohmann/: json.hpp
graph/: CMakeLists.txt
graph/include/: bipartite_graph.hpp  breadth_first_search.hpp  components.hpp  depth_first_search.hpp  edge.hpp  edge_writer.hpp  graph.hpp  graph_data.hpp  graph_io.hpp  graph_reader.hpp  graph_search.hpp  graph_writer.hpp  neighbor_range.hpp  neighbors_iterator.hpp  open_wbo_reader.hpp  open_wbo_writer.hpp  pace_graph_reader.hpp  pace_solution_writer.hpp  random_graph.hpp  subgraph.hpp  types.hpp  vertex.hpp
graph/lib/: bipartite_graph.cpp  components.cpp  edge_writer.cpp  egde.cpp  graph.cpp  graph_iterator.cpp  graph_iterator.hpp  graph_reader.cpp  graph_writer.cpp  main.cpp  neighbor_range.cpp  neighbors_iterator.cpp  open_wbo_reader.cpp  open_wbo_writer.cpp  pace_graph_reader.cpp  pace_solution_writer.cpp  random_graph.cpp  residual_graph.cpp  subgraph.cpp  util.hpp  vertex.cpp
graph/test/: bipartite_graph_test.cpp  breadth_first_search_test.cpp  depth_first_search_test.cpp  edge_count_test.cpp  graph_delete_test.cpp  graph_iterator_test.cpp  graph_reader_test.cpp  graph_test.cpp  pace_graph_io_test.cpp  partition_test.cpp  subgraph_test.cpp  util_test.cpp  vertex_test.cpp
notes/: datareduction.md  solver_pseudocode  todo.md
presentations/presentation_1/: degrees1000.csv  degrees150.csv  degrees195.csv  edge_benchmark.csv  neighbour_benchmark.csv  presentation_1.tex
presentations/presentation_2/: both_dimacs.csv  both_random.csv  bound_comparison.csv  bound_comparison_dimacs.csv  clique_dimacs.csv  clique_random.csv  only_clique_bound.csv  only_clique_bound_dimacs.csv  only_clique_bound_random.csv  only_lp_bound_dimacs.csv  only_lp_bound_dimacs_out.csv  only_lp_bound_random.csv  only_lp_bound_random_out.csv  only_lp_bound_snap.csv  presentation_2.aux  presentation_2.fdb_latexmk  presentation_2.fls  presentation_2.nav  presentation_2.tex  test_result_all_bounds.txt
presentations/presentation_3/: presentation_3.aux  presentation_3.fdb_latexmk  presentation_3.fls  presentation_3.nav  presentation_3.tex
presentations/presentation_4/: feocean.csv  (+34 more)
tools/: CMakeLists.txt  benchmark.py  csv.py
vc_heuristic/: CMakeLists.txt
vc_heuristic/include/: max_degree_heuristic.hpp  maximal_matching.hpp
vc_heuristic/src/: main.cpp  max_degree_heuristic.cpp  maximal_matching.cpp
vc_heuristic/test/: heuristic_test.cpp
vertex_cover/: CMakeLists.txt
vertex_cover/include/: configuration.hpp  konig_lp_solver.hpp  mirrors.hpp  vertex_cover.hpp  vertex_cover_solver.hpp
vertex_cover/include/bounds/: clique_cover_lb.hpp  cycle_cover_lb.hpp
vertex_cover/include/solver/: k_solver.hpp  max_degree_neighbor_rule_extend_solver.hpp  max_degree_neighbor_rule_solver.hpp  random_edge_solver.hpp
vertex_cover/res/: benchmark.sh  build.sh  config_empty.json  config_example.json  config_fast.json  pre_config_fast.json
vertex_cover/src/: configuration.cpp  main.cpp  mirrors.cpp  vertex_cover.cpp  vertex_cover_solver.cpp
vertex_cover/src/bounds/: clique_cover_lb.cpp  cycle_cover_lb.cpp
vertex_cover/src/solver/: k_solver.cpp  max_degree_neighbor_rule_extend_solver.cpp  max_degree_neighbor_rule_solver.cpp  random_edge_solver.cpp
vertex_cover/test/res/: 000002_000000000006.input  000012_000000000120.input  000095_000000000950.input  crack_reduced.graph.input  crack_reduced_2.graph.input  crack_reduced_3.graph.input  crack_reduced_crown_bug.dimacs  ninja_star.input
vertex_cover/test/src/: clique_cover_test.cpp  configuration_test.cpp  cycle_cover_test.cpp  edge_writer_test.cpp  mirror_test.cpp  vc_correctness_test.cpp
(+34 files in other folders)
